[package]
name = "mm-hammer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.9"
metamath-knife = { git = "https://github.com/david-a-wheeler/metamath-knife", branch = "parse_statement" }
annotate-snippets = "0.9"
